kubernetes/infra/keycloak-system/keycloak-instance/_base/app.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  hostnames:
    - keycloak.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: kc-infra-service
          port: 8080
